semgrep/tests/e2e/snapshots/test_rule_parser/test_rule_parser_cli_pattern/error.txt
error: invalid pattern
  --> CLI Input:1
1 | #include $X
  | ^^^^^^^^^^

Pattern could not be parsed as C

